--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@supabase/supabase-js": "^2.50.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.53.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
